Fix psql error (created db, created user)

--- a/config/database.yml
+++ b/config/database.yml
@@ -20,6 +20,10 @@ default: &default
   # For details on connection pooling, see Rails configuration guide
   # http://guides.rubyonrails.org/configuring.html#database-pooling
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
+  host: localhost
+  pool: 5
+  username: ticketevent
+  password: ticketevent
 
 development:
   <<: *default
@@ -90,4 +94,4 @@ production:
   <<: *default
   database: ticketevent_production
   username: ticketevent
-  password: <%= ENV['COOKBOOK_DATABASE_PASSWORD'] %>
+  password: <%= ENV['TICKETEVENT_DATABASE_PASSWORD'] %>
